Update labels to include time format in Japanese

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ button:disabled{ opacity:.6; }
 <div class="wrap">
 
   <div>
-    <div class="big-label">所要時間</div>
+    <div class="big-label">所要時間(hh:mm:ss)</div>
     <div id="elapsed" class="big-time">00:00:00</div>
     <div class="divider"></div>
   </div>
@@ -128,7 +128,7 @@ button:disabled{ opacity:.6; }
   <div class="divider"></div>
 
   <div>
-    <div class="section-title">予測完了時間</div>
+    <div class="section-title">予測完了時間(hh:mm:ss)</div>
     <div id="pred" class="eta">00:00:00</div>
     <div class="divider"></div>
   </div>
