--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ body{
   color:var(--fg);
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Hiragino Sans","Noto Sans JP",sans-serif;
 }
+
+/* 画面全体を縦に積む */
 .wrap{
   min-height:100vh;
   padding:max(16px, env(safe-area-inset-top)) 12px max(16px, env(safe-area-inset-bottom));
@@ -34,6 +36,7 @@ body{
   flex-direction:column;
   gap:16px;
 }
+
 .big-label{
   font-size:clamp(20px,5vw,28px);
   font-weight:500;
@@ -52,6 +55,7 @@ body{
   width:100%;
   margin-top:6px;
 }
+
 .field{
   display:flex;
   flex-direction:column;
@@ -75,6 +79,7 @@ body{
   padding-bottom:4px;
   outline:none;
 }
+
 .section-title{
   font-size:clamp(22px,5.5vw,32px);
   font-weight:600;
@@ -88,24 +93,7 @@ body{
   font-variant-numeric:tabular-nums;
 }
 
-.btns{
-  margin-top:auto;
-  display:flex;
-  gap:12px;
-}
-button{
-  flex:1;
-  border:none;
-  border-radius:16px;
-  padding:16px 0;
-  font-size:clamp(18px,5vw,28px);
-  font-weight:800;
-  background:var(--btn-bg);
-  color:var(--btn-fg);
-}
-button:disabled{ opacity:.6; }
-
-/* --- Wake Lock UI --- */
+/* Wake Lock */
 .wake-line{
   display:flex;
   align-items:center;
@@ -125,12 +113,54 @@ button:disabled{ opacity:.6; }
   background: rgba(255,255,255,.92);
   color: var(--btn-fg);
 }
-.wake-btn.on{
-  background: rgba(255,255,255,1);
-}
+.wake-btn.on{ background: rgba(255,255,255,1); }
 .wake-msg{
   opacity:.85;
   font-size: 0.95em;
+}
+
+/* ボタンエリアはログの上に置く（ログが伸びても操作は上で完結） */
+.btns{
+  display:flex;
+  gap:12px;
+}
+button{
+  flex:1;
+  border:none;
+  border-radius:16px;
+  padding:16px 0;
+  font-size:clamp(18px,5vw,28px);
+  font-weight:800;
+  background:var(--btn-bg);
+  color:var(--btn-fg);
+}
+button:disabled{ opacity:.6; }
+
+/* ログ（全件表示 + 縦スクロール） */
+.log-title{
+  color: var(--muted);
+  font-size: clamp(14px, 3.8vw, 18px);
+  font-weight:600;
+  margin: 0 0 8px;
+}
+.log-box{
+  border:2px solid rgba(255,255,255,.35);
+  border-radius: 14px;
+  padding: 10px 12px;
+  color: rgba(255,255,255,.92);
+  font-size: clamp(13px, 3.6vw, 16px);
+  line-height: 1.45;
+  font-variant-numeric: tabular-nums;
+  white-space: pre-line;
+  user-select: text;
+
+  /* ★ここがキモ：全件表示しつつ、長くなったらスクロール */
+  max-height: 28vh;   /* ここは好みで 25〜40vh くらいで調整可 */
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch; /* iOSで惰性スクロール */
+}
+.log-empty{
+  opacity: .8;
 }
 </style>
 </head>
@@ -138,29 +168,33 @@ button:disabled{ opacity:.6; }
 <body>
 <div class="wrap">
 
+  <!-- 所要時間 -->
   <div>
     <div class="big-label">所要時間</div>
     <div id="elapsed" class="big-time">00:00:00</div>
     <div class="divider"></div>
   </div>
 
+  <!-- ロット数 -->
   <div class="field">
     <div class="label">ロット数（1ロットあたりの個数）</div>
     <input id="lotCount" class="value" type="number" min="1" value="20" inputmode="numeric">
   </div>
   <div class="divider"></div>
 
+  <!-- 本日のノルマ -->
   <div class="field">
     <div class="label">本日のノルマ（合計個数）</div>
     <input id="targetCount" class="value" type="number" min="1" value="1000" inputmode="numeric">
   </div>
   <div class="divider"></div>
 
+  <!-- 予測完了時間 -->
   <div>
     <div class="section-title">予測完了時間</div>
     <div id="pred" class="eta">00:00:00</div>
 
-    <div id="wakeLine" class="wake-line">
+    <div class="wake-line">
       画面ON維持：
       <button id="wakeBtn" class="wake-btn" type="button">OFF</button>
       <span id="wakeMsg" class="wake-msg"></span>
@@ -169,26 +203,38 @@ button:disabled{ opacity:.6; }
     <div class="divider"></div>
   </div>
 
+  <!-- ボタン -->
   <div class="btns">
     <button id="startBtn">スタート</button>
     <button id="stopBtn" disabled>ストップ</button>
     <button id="resetBtn">リセット</button>
   </div>
 
+  <div class="divider"></div>
+
+  <!-- ログ（画面の一番下） -->
+  <div>
+    <div class="log-title">ログ</div>
+    <div id="logBox" class="log-box log-empty">（まだありません）</div>
+  </div>
+
 </div>
 
 <script>
 (() => {
-  // ===== 保存（ロット数・ノルマ・所要時間・稼働状態）=====
-  // キーを変えると保存が分離される
-  const STORE_KEY = "work_pace_state_v2";
+  const STORE_KEY = "work_pace_state_v3";
 
-  // ===== タイマー本体 =====
+  // タイマー
   let running = false;
-  let startMs = 0;     // 現在の計測開始（再開）時刻（epoch ms）
-  let elapsedMs = 0;   // いままでの累積経過（停止中はこれだけ）
+  let startMs = 0;
+  let elapsedMs = 0;
   let timer = null;
 
+  // ログ
+  let segmentStartMs = null;
+  let segments = []; // [{start:number, end:number|null}]
+
+  // DOM
   const elapsedEl = document.getElementById('elapsed');
   const predEl = document.getElementById('pred');
   const lotEl = document.getElementById('lotCount');
@@ -198,9 +244,10 @@ button:disabled{ opacity:.6; }
   const stopBtn  = document.getElementById('stopBtn');
   const resetBtn = document.getElementById('resetBtn');
 
-  // Wake Lock UI
   const wakeBtn = document.getElementById('wakeBtn');
   const wakeMsg = document.getElementById('wakeMsg');
+
+  const logBox = document.getElementById('logBox');
 
   const pad = n => String(n).padStart(2,'0');
 
@@ -211,6 +258,22 @@ button:disabled{ opacity:.6; }
     const mm = m % 60;
     const hh = Math.floor(m/60);
     return `${pad(hh)}:${pad(mm)}:${pad(ss)}`;
+  }
+
+  function fmtStamp(ts){
+    const d = new Date(ts);
+    const mo = pad(d.getMonth()+1);
+    const da = pad(d.getDate());
+    const hh = pad(d.getHours());
+    const mm = pad(d.getMinutes());
+    return `${mo}/${da} ${hh}:${mm}`;
+  }
+
+  function fmtSegment(seg){
+    const s = fmtStamp(seg.start);
+    if (seg.end == null) return `${s}–…（計測中）`;
+    const e = fmtStamp(seg.end);
+    return `${s}–${e}`;
   }
 
   function toPositiveInt(v, fallback){
@@ -230,69 +293,15 @@ button:disabled{ opacity:.6; }
     stopBtn.disabled = !running;
   }
 
-  // ---- 保存（頻繁すぎないように間引き）----
-  let lastSavedAt = 0;
-  function saveState(force=false){
-    const now = Date.now();
-    if (!force && (now - lastSavedAt) < 800) return; // 0.8秒未満は保存を間引く
-    lastSavedAt = now;
-
-    const lot = toPositiveInt(lotEl.value, 1);
-    const target = toPositiveInt(targetEl.value, 1);
-
-    const state = {
-      lot,
-      target,
-      // “今この瞬間の累積経過”を保存しておく
-      elapsedMs: currentElapsedMs(),
-      // もし計測中に落ちても復帰できるよう、計測中かどうかと保存時刻を持つ
-      running: running,
-      savedAt: now
-    };
-
-    try{
-      localStorage.setItem(STORE_KEY, JSON.stringify(state));
-    }catch(e){
-      // 保存できなくても動作は継続
+  function renderLog(){
+    if (segments.length === 0){
+      logBox.textContent = "（まだありません）";
+      logBox.classList.add("log-empty");
+      return;
     }
-  }
-
-  function loadState(){
-    try{
-      const raw = localStorage.getItem(STORE_KEY);
-      if(!raw) return false;
-
-      const s = JSON.parse(raw);
-      if(!s || typeof s !== 'object') return false;
-
-      if (Number.isFinite(Number(s.lot)) && Number(s.lot) > 0) {
-        lotEl.value = String(Math.floor(Number(s.lot)));
-      }
-      if (Number.isFinite(Number(s.target)) && Number(s.target) > 0) {
-        targetEl.value = String(Math.floor(Number(s.target)));
-      }
-
-      if (Number.isFinite(Number(s.elapsedMs)) && Number(s.elapsedMs) >= 0) {
-        elapsedMs = Math.floor(Number(s.elapsedMs));
-      } else {
-        elapsedMs = 0;
-      }
-
-      // もし前回「計測中」で落ちていたら、その分（現在時刻 - 保存時刻）を足して復帰
-      // ＝休憩や差し込みも含めた“実作業の所要時間”として自然
-      if (s.running === true && Number.isFinite(Number(s.savedAt))) {
-        const delta = Math.max(0, Date.now() - Number(s.savedAt));
-        elapsedMs += delta;
-        running = true;
-        startMs = Date.now();
-      } else {
-        running = false;
-      }
-
-      return true;
-    }catch(e){
-      return false;
-    }
+    // ★全件表示：古い→新しい（履歴として自然）
+    logBox.textContent = segments.map(fmtSegment).join("\n");
+    logBox.classList.remove("log-empty");
   }
 
   function render(){
@@ -305,26 +314,115 @@ button:disabled{ opacity:.6; }
     // 予測完了時間 = ceil(経過時間 × ノルマ ÷ ロット数)
     const predictedMs = Math.ceil(cur * target / lot);
     predEl.textContent = fmtHMS(predictedMs);
+
+    renderLog();
+  }
+
+  // 保存（間引き）
+  let lastSavedAt = 0;
+  function saveState(force=false){
+    const now = Date.now();
+    if (!force && (now - lastSavedAt) < 800) return;
+    lastSavedAt = now;
+
+    const state = {
+      lot: toPositiveInt(lotEl.value, 1),
+      target: toPositiveInt(targetEl.value, 1),
+      elapsedMs: currentElapsedMs(),
+      running,
+      savedAt: now,
+      segmentStartMs,
+      segments
+    };
+
+    try{
+      localStorage.setItem(STORE_KEY, JSON.stringify(state));
+    }catch(e){}
+  }
+
+  function loadState(){
+    try{
+      const raw = localStorage.getItem(STORE_KEY);
+      if(!raw) return false;
+      const s = JSON.parse(raw);
+      if(!s || typeof s !== 'object') return false;
+
+      if (Number.isFinite(Number(s.lot)) && Number(s.lot) > 0) lotEl.value = String(Math.floor(Number(s.lot)));
+      if (Number.isFinite(Number(s.target)) && Number(s.target) > 0) targetEl.value = String(Math.floor(Number(s.target)));
+
+      elapsedMs = (Number.isFinite(Number(s.elapsedMs)) && Number(s.elapsedMs) >= 0) ? Math.floor(Number(s.elapsedMs)) : 0;
+
+      if (Array.isArray(s.segments)) {
+        segments = s.segments
+          .filter(x => x && Number.isFinite(Number(x.start)))
+          .map(x => ({
+            start: Math.floor(Number(x.start)),
+            end: (x.end == null ? null : (Number.isFinite(Number(x.end)) ? Math.floor(Number(x.end)) : null))
+          }));
+      } else {
+        segments = [];
+      }
+
+      if (s.running === true && Number.isFinite(Number(s.savedAt))) {
+        segmentStartMs = Number.isFinite(Number(s.segmentStartMs)) ? Math.floor(Number(s.segmentStartMs)) : null;
+
+        // 計測中に落ちた時間を加算（救済）
+        const delta = Math.max(0, Date.now() - Number(s.savedAt));
+        elapsedMs += delta;
+
+        running = true;
+        startMs = Date.now();
+
+        // 最後が計測中じゃなければ整合のため追加
+        const last = segments[segments.length - 1];
+        const lastIsRunning = last && last.end == null;
+        if (segmentStartMs && !lastIsRunning) {
+          segments.push({ start: segmentStartMs, end: null });
+        }
+      } else {
+        running = false;
+        segmentStartMs = null;
+      }
+
+      return true;
+    }catch(e){
+      return false;
+    }
   }
 
   function start(){
     if(running) return;
     running = true;
     startMs = Date.now();
+
+    segmentStartMs = Date.now();
+    segments.push({ start: segmentStartMs, end: null });
+
     setButtons();
+
     timer = setInterval(() => {
       render();
       saveState(false);
     }, 200);
+
+    render();
     saveState(true);
   }
 
   function stop(){
     if(!running) return;
+
     elapsedMs = currentElapsedMs();
+
+    const last = segments[segments.length - 1];
+    if (last && last.end == null) last.end = Date.now();
+
     running = false;
+    segmentStartMs = null;
+
     clearInterval(timer);
     timer = null;
+
     setButtons();
     render();
     saveState(true);
@@ -335,12 +433,15 @@ button:disabled{ opacity:.6; }
     clearInterval(timer);
     timer = null;
     elapsedMs = 0;
+    segmentStartMs = null;
+
+    // リセットは「時間だけ」：ログは残す（必要ならここで segments=[] にする）
     setButtons();
     render();
     saveState(true);
   }
 
-  // 入力変更 → 保存 → 再計算
+  // 入力変更→保存
   lotEl.oninput = () => { saveState(true); render(); };
   targetEl.oninput = () => { saveState(true); render(); };
 
@@ -348,14 +449,13 @@ button:disabled{ opacity:.6; }
   stopBtn.onclick = stop;
   resetBtn.onclick = reset;
 
-  // アプリが裏に回ったり閉じられたりするタイミングで、念のため強制保存
   window.addEventListener('pagehide', () => saveState(true));
   window.addEventListener('beforeunload', () => saveState(true));
   document.addEventListener('visibilitychange', () => {
     if (document.visibilityState === 'hidden') saveState(true);
   });
 
-  // ===== Wake Lock（安全設計：OFFデフォ、失敗しても壊れない）=====
+  // Wake Lock
   let wakeSupported = ('wakeLock' in navigator);
   let wakeEnabled = false;
   let wakeLockSentinel = null;
@@ -395,9 +495,7 @@ button:disabled{ opacity:.6; }
   async function releaseWakeLock(){
     try{
       if (wakeLockSentinel) await wakeLockSentinel.release();
-    }catch(e){
-      // 無視
-    }finally{
+    }catch(e){}finally{
       wakeLockSentinel = null;
       wakeEnabled = false;
       setWakeUI();
@@ -430,11 +528,10 @@ button:disabled{ opacity:.6; }
     }
   });
 
-  // ===== 起動時 =====
-  loadState();     // ← 前回状態を復元（所要時間も）
+  // 起動
+  loadState();
   setButtons();
 
-  // 計測中で復元された場合、タイマーを再始動
   if (running) {
     timer = setInterval(() => {
       render();
@@ -444,7 +541,7 @@ button:disabled{ opacity:.6; }
 
   setWakeUI();
   render();
-  saveState(true); // 初回でも状態を確実に保存しておく
+  saveState(true);
 })();
 </script>
 
@@ -456,5 +553,6 @@ button:disabled{ opacity:.6; }
     });
   }
 </script>
+
 </body>
 </html>
